# rag360-rao-agent

./: .dockerignore  .env.compose  .env.dev.example  .gitignore  PROJECT_OVERVIEW.md  README.md  docker-compose.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: config.instructions.md  docker.instructions.md  python-agents.instructions.md
agents/: Dockerfile  config.yaml  docker-entrypoint.sh  rao-constraints.txt
agents/rag360_agents/: pyproject.toml
agents/rag360_agents/src/rag360_agents/: __init__.py  augment_agent.py  auth_middleware.py  const.py  driver.py  hello_world_agent.py  retrieve_agent.py  retrieve_definition_agent.py  standalone_entrypoint.py
tests/: conftest.py
tests/integration/: conftest.py  helpers.py  test_augment.py  test_retrieve.py  test_retrieve_definition.py
tests/unit/: test_augment_agent.py  test_auth_headers.py  test_retrieve_agent.py
